unpackaged/main/default/objects/Custom_Exception_Logs__c/Custom_Exception_Logs__c.object-meta.xml
<CustomObject>
    <description>Object to hold exception logs from apex code</description>
    <label>Custom Exception Logs</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Custom Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>