unpackaged/main/default/objects/Custom_Exception_Logs__c/fields/Method_name__c.field-meta.xml
<CustomField>
    <fullName>Method_name__c</fullName>
    <label>Method name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>