unpackaged/main/default/objects/Custom_Exception_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Message__c</columns>
    <columns>Method_name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <role>Application_Admin</role>
    </sharedTo>
</ListView>